Use ZGC by default instead of ParallelGC